tests-integration/fixtures/checking/1772440440_prim_row_open/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
openLeft ::
  forall (r :: Row Type) (u :: Row Type).
    Union @Type ( a :: Int | (r :: Row Type) ) ( b :: String ) (u :: Row Type) =>
    Proxy @(Row Type) (u :: Row Type)
openRight ::
  forall (r :: Row Type) (u :: Row Type).
    Union @Type ( a :: Int ) ( b :: String | (r :: Row Type) ) (u :: Row Type) =>
    Proxy @(Row Type) (u :: Row Type)
backwardLeft ::
  forall (l :: Row Type) (r :: Row Type).
    Union @Type (l :: Row Type) ( b :: String ) ( a :: Int, b :: String | (r :: Row Type) ) =>
    Proxy @(Row Type) (l :: Row Type)
backwardRight ::
  forall (r :: Row Type) (u :: Row Type).
    Union @Type ( a :: Int ) (r :: Row Type) ( a :: Int, b :: String | (u :: Row Type) ) =>
    Proxy @(Row Type) (r :: Row Type)
consOpen ::
  forall (r :: Row Type) (row :: Row Type).
    Cons @Type "x" Int ( a :: String | (r :: Row Type) ) (row :: Row Type) =>
    Proxy @(Row Type) (row :: Row Type)
decomposeOpen ::
  forall (t :: Type) (tail :: Row Type) (r :: Row Type).
    Cons @Type "x" (t :: Type) (tail :: Row Type) ( a :: String, x :: Int | (r :: Row Type) ) =>
    Proxy @Type (t :: Type)
extractTail ::
  forall (tail :: Row Type) (r :: Row Type).
    Cons @Type "x" Int (tail :: Row Type) ( a :: String, x :: Int | (r :: Row Type) ) =>
    Proxy @(Row Type) (tail :: Row Type)
lacksOpen ::
  forall (r :: Row Type).
    Lacks @Type "missing" ( a :: Int, b :: String | (r :: Row Type) ) =>
    Proxy @(Row Type) (r :: Row Type) -> Int
lacksPresent ::
  forall (r :: Row Type).
    Lacks @Type "a" ( a :: Int | (r :: Row Type) ) => Proxy @(Row Type) (r :: Row Type) -> Int
forceSolve ::
  forall (t :: Row Type) (t1 :: Row Type) (t2 :: Row Type) (t3 :: Row Type) (t4 :: Row Type)
    (t5 :: Row Type) (t6 :: Row Type) (t7 :: Row Type).
    Union @Type (t :: Row Type) ( b :: String ) ( a :: Int, b :: String | (t1 :: Row Type) ) =>
    Union @Type (t2 :: Row Type) ( b :: String ) (t3 :: Row Type) =>
    { backwardLeft :: Proxy @(Row Type) (t :: Row Type)
    , backwardRight :: Proxy @(Row Type) ( b :: String | (t4 :: Row Type) )
    , consOpen :: Proxy @(Row Type) ( a :: String, x :: Int | (t5 :: Row Type) )
    , decomposeOpen :: Proxy @Type Int
    , extractTail :: Proxy @(Row Type) ( a :: String | (t6 :: Row Type) )
    , lacksOpen :: Int
    , lacksPresent :: Int
    , openLeft :: Proxy @(Row Type) ( a :: Int | (t3 :: Row Type) )
    , openRight :: Proxy @(Row Type) ( a :: Int, b :: String | (t7 :: Row Type) )
    }

Types

Diagnostics
error[AmbiguousConstraint]: Ambiguous constraint: Lacks @Type "missing" ?79
  --> 33:1..43:4
   |
33 | forceSolve =
   | ^~~~~~~~~~~~
error[AmbiguousConstraint]: Ambiguous constraint: Lacks @Type "a" ( a :: Int | ?82 )
  --> 33:1..43:4
   |
33 | forceSolve =
   | ^~~~~~~~~~~~
